--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://kit.fontawesome.com/a14ae32021.js" crossorigin="anonymous"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>This one is for my Varchhu</title>
+<title>Bu Aşkım Zeynep İçin!</title>
 
 <style type="text/css">
 @font-face {
@@ -43,9 +43,11 @@
 			<br>
 			Tek demek istediğim şey:<br />
 			Bu yaşadığımız kötü dönem geçici<br />
+			Ve geçecek de ulan!<br />
 			<br>
 			<br>
-			Ve bebeğim,<br />
+			Son olarak,<br />
+			Aşkım, Bebeğim, Prensesim, Kadınım!<br />
 			Seni çok ama çok seviyorum !! <br />
 			<br>
 			<br>
