--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 			Seni çok ama çok seviyorum !! <br />
 			<br>
 			<br>
-			Eğer şimdi bana sarılmak istersen aşağıdaki kalbe dokunabilirsin.<br />
+			Ve son olarak sana küçük bir hediyem var. Hediye için aşağıdaki kalbe tıklayabilirsin<br />
 			<br>
 			<span id="heartspan">
-			<a href="image.jpg"><i class="fas fa-heart" id="icon"></i></a>
+			<a href="https://open.spotify.com/playlist/4iTMOHoxadyPjpHwWJfSH7?si=3TaIzprETOC_LydZJSv3Qg"><i class="fas fa-heart" id="icon"></i></a>
 			</span>
 		</div>
 		<div id="loveHeart">
